--- a/index.html
+++ b/index.html
@@ -575,6 +575,25 @@
   <li>
     <div style="float:left;">
       <font color="#00066f">
+        CityU Top 5 Runner, City University of Hong Kong
+      </font>
+    </div>
+    
+    <br>
+    
+    <details>
+      <summary style="outline:none">Athlete</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/cityu_marathon_2021.jpg" alt="marathon-2021">
+        </div>
+      </div>
+    </details>
+  </li>
+  
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">
         Standard Chartered Hong Kong Marathon
       </font>
     </div>
@@ -586,9 +605,6 @@
       <div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/marathon2021.jpg" alt="marathon-2021">
-        </div>
-        <div style="text-align:center">
-          <img width="99%device-width" src="./imgs/cityu_marathon_2021.jpg" alt="marathon-2021">
         </div>
         <div style="text-align:center">
           <img width="99%device-width" src="./imgs/cityu-deligation-2021.jpg" alt="marathon-2021">
