--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       
       <p>Good Articles</p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
+        <li><a href="./resources/Statement_of_Purpose-Kai-Fu-LEE-CMU.pdf"> <i class="fab fa fa-file-pdf-o"></i> Statement of Purpose at CMU by Dr. Kai-Fu Lee</a></li>
         <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
         <li><a href="./resources/清华计算机系与人工智能40年.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学计算机系与人工智能40年</a></li>
         <li><a href="./resources/徐轶青-读博那些事儿.pdf"> <i class="fab fa fa-file-pdf-o"></i> 读博那些事儿 by Prof. Yiqing Xu</a></li>
