--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <li><a href="./resources/Statement_of_Purpose-Kai-Fu-LEE-CMU.pdf"> <i class="fab fa fa-file-pdf-o"></i> Statement of Purpose at CMU by Dr. Kai-Fu Lee</a></li>
         <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
         <li><a href="./resources/清华计算机系与人工智能40年.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学计算机系与人工智能40年</a></li>
+        <li><a href="./resources/Academic-Achievements-Richard.pdf"> <i class="fab fa fa-file-pdf-o"></i> Academic Achievements of Prof. Richard Yi-Da Xu</a></li>
         <li><a href="./resources/徐轶青-读博那些事儿.pdf"> <i class="fab fa fa-file-pdf-o"></i> 读博那些事儿 by Prof. Yiqing Xu</a></li>
         <li><a href="./resources/The-PhD-Grind.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Ph.D. Grind by Prof. Philip J. Guo</a></li>
         <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa-internet-explorer"></i> You and Your Research by Prof. Richard Hamming</a></li>
