--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <li><a href="./files/Concept-Matching.pdf"> <i class="fab fa fa-file-pdf-o"></i> Concept Matching for Medical Terms</a></li>
       
       <p>Computer Vision (CV)</p>
+        <li><a href="./files/Presentation/IQA-Perceptual-Optimization.pdf"> <i class="fab fa fa-file-pdf-o"></i> Image Quality Assessment and Perceptual Optimization</a></li>
         <li><a href="./files/Model-Compression-Acceleration.pdf"> <i class="fab fa fa-file-pdf-o"></i> Deep Learning Models Compression and Acceleration</a></li>
         <li><a href="./files/Spatial-Sparse-CNNs.pdf"> <i class="fab fa fa-file-pdf-o"></i> 3D Human Pose Estimation and Human Body Reconstruction</a></li>
         <li><a href="./files/YOLO.pdf"> <i class="fab fa fa-file-pdf-o"></i> YOLO Object Detection</a></li>
