--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-git"> <i class="fab fa-github"></i> Git Basic Commands</a></li>
       
       <p>Recommended Books</p>
-        <li><a href="./books/Convex%20Optimization.pdf"> <i class="fab fa fa-file-pdf-o"></i> Convex Optimization (Stephen Boyd and Lieven Vandenberghe)</a></li>
-        <li><a href="./books/Numerical%20Optimization.pdf"> <i class="fab fa fa-file-pdf-o"></i> Numerical Optimization (Jorge Nocedal and Stephen J. Wright)</a></li>
-        <li><a href="./books/Pattern%20Recognition%20and%20Machine%20Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Pattern Recognition and Machine Learning (Christopher Bishop)</a></li>
-        <li><a href="./books/Reinforcement%20Learning-%20An%20Introduction.pdf"> <i class="fab fa fa-file-pdf-o"></i> Reinforcement Learning: An Introduction (Richard S. Sutton and Andrew G. Barto)</a></li>
-        <li><a href="./books/Digital%20Image%20Processing.pdf"> <i class="fab fa fa-file-pdf-o"></i> Digital Image Processing (Rafael C. Gonzalez and Richard E. Woods)</a></li>
-        <li><a href="./books/Multiple%20View%20Geometry%20in%20Computer%20Vision.pdf"> <i class="fab fa fa-file-pdf-o"></i> Multiple View Geometry in Computer Vision (Richard Hartley and Andrew Zisserman)</a></li>
-        <li><a href="./books/Foundation%20Models%20for%20Natural%20Language%20Processing.pdf"> <i class="fab fa fa-file-pdf-o"></i> Foundation Models for Natural Language Processing (Gerhard Paaß and Sven Giesselbach)</a></li>
-        <li><a href="./books/Graph%20Representation%20Learning.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Representation Learning (William L. Hamilton)</a></li>
-        <li><a href="./books/Computer%20Systems-%20A%20Programmer's%20Perspective.pdf"> <i class="fab fa fa-file-pdf-o"></i> Computer Systems: A Programmer's Perspective (Randal E. Bryant and David R. O'Hallaron)</a></li>
-        <li><a href="./books/Computer%20Organization%20and%20Design-%20The%20Hardware%3ASoftware%20Interface.pdf"> <i class="fab fa fa-file-pdf-o"></i> Computer Organization and Design: The Hardware/Software Interface (David A Patterson and John L. Hennessy)</a></li>
+        <li><a href="./books/Convex%20Optimization.pdf"> <i class="fab fa fa-book"></i> Convex Optimization (Stephen Boyd and Lieven Vandenberghe)</a></li>
+        <li><a href="./books/Numerical%20Optimization.pdf"> <i class="fab fa fa-book"></i> Numerical Optimization (Jorge Nocedal and Stephen J. Wright)</a></li>
+        <li><a href="./books/Pattern%20Recognition%20and%20Machine%20Learning.pdf"> <i class="fab fa fa-book"></i> Pattern Recognition and Machine Learning (Christopher Bishop)</a></li>
+        <li><a href="./books/Reinforcement%20Learning-%20An%20Introduction.pdf"> <i class="fab fa fa-book"></i> Reinforcement Learning: An Introduction (Richard S. Sutton and Andrew G. Barto)</a></li>
+        <li><a href="./books/Digital%20Image%20Processing.pdf"> <i class="fab fa fa-book"></i> Digital Image Processing (Rafael C. Gonzalez and Richard E. Woods)</a></li>
+        <li><a href="./books/Multiple%20View%20Geometry%20in%20Computer%20Vision.pdf"> <i class="fab fa fa-book"></i> Multiple View Geometry in Computer Vision (Richard Hartley and Andrew Zisserman)</a></li>
+        <li><a href="./books/Foundation%20Models%20for%20Natural%20Language%20Processing.pdf"> <i class="fab fa fa-book"></i> Foundation Models for Natural Language Processing (Gerhard Paaß and Sven Giesselbach)</a></li>
+        <li><a href="./books/Graph%20Representation%20Learning.pdf"> <i class="fab fa fa-book"></i> Graph Representation Learning (William L. Hamilton)</a></li>
+        <li><a href="./books/Computer%20Systems-%20A%20Programmer's%20Perspective.pdf"> <i class="fab fa fa-book"></i> Computer Systems: A Programmer's Perspective (Randal E. Bryant and David R. O'Hallaron)</a></li>
+        <li><a href="./books/Computer%20Organization%20and%20Design-%20The%20Hardware%3ASoftware%20Interface.pdf"> <i class="fab fa fa-book"></i> Computer Organization and Design: The Hardware/Software Interface (David A. Patterson and John L. Hennessy)</a></li>
       
       <p>Academic Resources</p>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
