--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <li><a href="./books/Convex%20Optimization.pdf"> <i class="fab fa fa-book"></i> Convex Optimization (Stephen Boyd and Lieven Vandenberghe)</a></li>
         <li><a href="./books/Numerical%20Optimization.pdf"> <i class="fab fa fa-book"></i> Numerical Optimization (Jorge Nocedal and Stephen J. Wright)</a></li>
         <li><a href="./books/Lectures%20on%20Convex%20Optimization.pdf"> <i class="fab fa fa-book"></i> Lectures on Convex Optimization (Yurii Nesterov)</a></li>
+        <li><a href="./books/Nonlinear%20Programming.pdf"> <i class="fab fa fa-book"></i> Nonlinear Programming (Dimitri P. Bertsekas)</a></li>
         <li><a href="./books/Pattern%20Recognition%20and%20Machine%20Learning.pdf"> <i class="fab fa fa-book"></i> Pattern Recognition and Machine Learning (Christopher Bishop)</a></li>
         <li><a href="./books/Reinforcement%20Learning-%20An%20Introduction.pdf"> <i class="fab fa fa-book"></i> Reinforcement Learning: An Introduction (Richard S. Sutton and Andrew G. Barto)</a></li>
         <li><a href="./books/Digital%20Image%20Processing.pdf"> <i class="fab fa fa-book"></i> Digital Image Processing (Rafael C. Gonzalez and Richard E. Woods)</a></li>
