--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
         <li><a href="./resources/博士五年总结系列-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> 博士五年总结系列 by Dr. Yuandong Tian</a></li>
         <li><a href="./resources/PhD-Life-JeanYang.pdf"> <i class="fab fa fa-file-pdf-o"></i> What My PhD Was Like by Prof. Jean Yang</a></li>
         <li><a href="./resources/CVPR之感想-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> CVPR之感想 by Dr. Yuandong Tian</a></li>
+        <li><a href="./resources/上海交通大学学生生存手册.pdf"> <i class="fab fa fa-file-pdf-o"></i> 上海交通大学学生生存手册</a></li>
+        <li><a href="https://linshanlee.com/"> <i class="fab fa-internet-explorer"></i> 李琳山教授個人數位典藏</a></li>
         <li><a href="https://www.youtube.com/watch?v=ji5_MqicxSo"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Randy Pausch Last Lecture: Achieving Your Childhood Dreams</a></li>
   </details>
   
@@ -219,7 +221,7 @@
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <!--  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>-->
   <!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
   
