--- a/index.html
+++ b/index.html
@@ -218,10 +218,11 @@
   
   <br>
   
-  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> Scholar</a>
-  <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> GitHub</a>
+  <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i> 𝚂𝚌𝚑𝚘𝚕𝚊𝚛</a>
+  <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i> 𝙶𝚒𝚝𝙷𝚞𝚋</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+  <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+  <a href="https://www.strava.com/athletes/shuyuej"><i class='fab fa-strava' style='font-size:24px;color:red'></i> 𝚂𝚝𝚛𝚊𝚟𝚊</a>
   <!--  <a href="./resume/Curriculum_Vitae_Shuyue_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> Résumé</a>-->
   <!--  <a href="https://hub.docker.com/u/shuyuej"><i class="fab fa-docker"></i> DockerHub</a> -->
   
