--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-vim"> <i class="fab fa-github"></i> Vim Basic Commands</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-git"> <i class="fab fa-github"></i> Git Basic Commands</a></li>
       
+      <p><font color="#0d1aff">𝐄𝐱𝐜𝐞𝐥𝐥𝐞𝐧𝐭 𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font></p>
+        <li><a href="./resources/PowerPoint/On%20the%20inductive%20bias%20of%20language%20modeling.pptx"> <i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i> On the Inductive Bias of Language Modeling</a> | <a href="https://youtu.be/PNTbvoweqBk?t=3046"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Oral Presentation (Tatsunori B. Hashimoto)</a></li>
+    
       <p><font color="#0d1aff">𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐁𝐨𝐨𝐤𝐬</font></p>
         <li><a href="./books/Convex%20Optimization.pdf"> <i class="fab fa fa-book"></i> Convex Optimization (Stephen Boyd and Lieven Vandenberghe)</a></li>
         <li><a href="./books/Numerical%20Optimization.pdf"> <i class="fab fa fa-book"></i> Numerical Optimization (Jorge Nocedal and Stephen J. Wright)</a></li>
