--- a/index.html
+++ b/index.html
@@ -723,10 +723,10 @@
 </body>
 
 <footer style="text-align:center">
-  𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙢𝙖𝙠𝙚 𝙡𝙞𝙛𝙚 𝙖 𝙗𝙡𝙚𝙨𝙨𝙞𝙣𝙜!<br>
+  𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙥𝙪𝙨𝙝 𝙮𝙤𝙪𝙧 𝙡𝙞𝙢𝙞𝙩𝙨!<br>
   Four Persons I Admire The Most:<br>
-  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Richard Yi-Da Xu</a>, <a href="https://en.wikipedia.org/wiki/Eliud_Kipchoge">Eliud Kipchoge</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
-  <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
+  <a href="https://en.wikipedia.org/wiki/Bruce_Lee">ℬ𝓇𝓊𝒸𝑒 ℒ𝑒𝑒</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">𝒫𝓇𝑜𝒻. ℛ𝒾𝒸𝒽𝒶𝓇𝒹 𝒴𝒾-𝒟𝒶 𝒳𝓊</a>, <a href="https://en.wikipedia.org/wiki/Eliud_Kipchoge">ℰ𝓁𝒾𝓊𝒹 𝒦𝒾𝓅𝒸𝒽𝑜𝑔𝑒</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">𝒞𝓇𝒾𝓈𝓉𝒾𝒶𝓃𝑜 ℛ𝑜𝓃𝒶𝓁𝒹𝑜</a><br>
+  <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 𝓑𝓻𝓾𝓬𝓮 𝓢. 𝓙𝓲𝓪</span>
 </footer>
 
 <br>
