--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>May 2023</strong> MPhil Thesis Defence Slides: <a href="./files/Thesis/MPhil-Thesis-Defense-Presentation-ShuyueJia.pdf"> Image Quality Assessment and Perceptual Optimization: A Non-local Modeling Approach</a>.
+  </li>
+  <li>
     <strong>Mar 2023</strong> A <a href="./files/Presentation/Foundation-Models-Sequential-Decision-Making.pdf"> Presentation</a> of Foundation Models for Sequential Decision Making.
   </li>
   <li>
