--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
 </body>
 
 <footer style="text-align:center">
-  𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙥𝙪𝙨𝙝 𝙮𝙤𝙪𝙧 𝙡𝙞𝙢𝙞𝙩𝙨!<br>
+  𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙗𝙚𝙮𝙤𝙣𝙙 𝙗𝙤𝙪𝙣𝙙𝙖𝙧𝙞𝙚𝙨!<br>
   Four Persons I Admire The Most:<br>
   <a href="https://en.wikipedia.org/wiki/Bruce_Lee">Bruce Lee</a>, <a href="https://www.math.hkbu.edu.hk/people/xu-yi-da/">Prof. Richard Yi-Da Xu</a>, <a href="https://en.wikipedia.org/wiki/Eliud_Kipchoge">Eliud Kipchoge</a>, and <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a><br>
   <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
