--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <strong>Nov 2022</strong> A <a href="./files/Proposal/Research_Proposal_VPS.pdf"> Research Proposal</a> of Video Panoptic Segmentation (VPS).
   </li>
   <li>
-    <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> accepted by <em>IEEE T-NNLS</em>
+    <strong>Aug 2022</strong> Our paper <a href="https://ieeexplore.ieee.org/document/9889159"> GCNs-Net</a> is accepted by <em>IEEE T-NNLS</em>
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/EEG-DL?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
@@ -268,7 +268,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>Aug 2022</strong> One Paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> accepted by <em>IEEE MMSP</em>
+    <strong>Aug 2022</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> is accepted by <em>IEEE MMSP</em>
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
       frameborder="0" scrolling="0" width="85px" height="20px">
@@ -280,7 +280,7 @@
   </li>
   <!--<li><strong>Apr 2022</strong> CV Research Intern at <a href="https://research.samsung.com/src-b"> Samsung Research</a>, Beijing, working on the video panoptic segmentation.</li>-->
   <li>
-    <strong>Dec 2021</strong> One Paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
+    <strong>Dec 2021</strong> Our paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> is accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
   </li>
   <!--<li><strong>Jul 2020</strong> NLP Intern at <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html"> Philips Research</a>, Shanghai, working on the medical named entity recognition, concept mapping, etc.</li>-->
   <li>
@@ -295,7 +295,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>Feb 2020</strong> One Paper<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> ESI-CNNs</a> accepted by <em>Journal of Neural Engineering</em> 
+    <strong>Feb 2020</strong> Our paper<a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta"> ESI-CNNs</a> is accepted by <em>Journal of Neural Engineering</em> 
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow?style=social"
       frameborder="0" scrolling="0" width="90px" height="20px">
