--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p><img class="profile-picture" src="./imgs/Profile-compressed.jpg"/></p>
 <!--I am a Ph.D. student at <a href="https://www.bu.edu/">Boston University</a>, where I am very fortunate to be advised by <a href="https://sites.bu.edu/depend/research/" style="color:black;">Dr. Wenchao Li</a>. Prior to BU, -->
 <p>
-  I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Dr. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Dr. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
+  I am a Ph.D. student at <a href="https://www.bu.edu/">Boston University</a>. Prior to BU, I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Dr. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Dr. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
   
   <br>
   <br>
