--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <br>
   <br>
   
-  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Foundation Models, e.g., Pre-trained (Multimodal) Large Language Model, Generative AI, and Computer Vision.
+  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Foundation Models, e.g., Large Pre-trained Language Models, Trustworthy AI, and Computer Vision.
   <details>
     <summary style="outline:none">here</summary>
     <div style="text-align:center">
