--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-docker"> <i class="fab fa-github"></i> Docker Basic Commands</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-vim"> <i class="fab fa-github"></i> Vim Basic Commands</a></li>
         <li><a href="https://github.com/SuperBruceJia/paper-reading/tree/master/learn-git"> <i class="fab fa-github"></i> Git Basic Commands</a></li>
-      
+        <li><a href="https://github.com/SuperBruceJia/CityU-MPhil-Thesis"> <i class="fab fa-github"></i> M.Phil. Thesis (LaTeX), City University of Hong Kong</a></li>
+
       <p><font color="#9933CC">𝐄𝐱𝐜𝐞𝐥𝐥𝐞𝐧𝐭 𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font></p>
         <li><a href="./resources/PowerPoint/On%20the%20inductive%20bias%20of%20language%20modeling.pptx"> <i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i> On the Inductive Bias of Language Modeling</a> | <a href="https://youtu.be/PNTbvoweqBk?t=3046"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Oral Presentation (Tatsunori B. Hashimoto)</a></li>
         <!--    <li><a href="./resources/PowerPoint/智能制造优化调度及展望.pdf"> <i class="fa fa fa-book"></i> 智能制造优化调度及展望</a></li>-->
