--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
       
       <p><font color="#9933CC">𝐑𝐞𝐜𝐨𝐦𝐦𝐞𝐧𝐝𝐞𝐝 𝐑𝐞𝐚𝐝𝐢𝐧𝐠𝐬</font></p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
-        <li><a href="./resources/Statement_of_Purpose-Kai-Fu-LEE-CMU.pdf"> <i class="fab fa fa-file-pdf-o"></i> Statement of Purpose at CMU by Dr. Kai-Fu Lee</a></li>
+        <li><a href="./resources/Statement_of_Purpose-Kai-Fu-LEE-CMU.pdf"> <i class="fab fa fa-file-pdf-o"></i> Statement of Purpose by Dr. Kai-Fu Lee</a></li>
+        <li><a href="./resources/AI-Dartmouth-College-1956.pdf"> <i class="fab fa fa-file-pdf-o"></i> Dartmouth Summer Project on Artificial Intelligence (1956)</a></li>
         <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
         <li><a href="./resources/清华计算机系与人工智能40年.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学计算机系与人工智能40年</a></li>
         <li><a href="./resources/Academic-Achievements-Richard.pdf"> <i class="fab fa fa-file-pdf-o"></i> Academic Achievements of Prof. Richard Yi-Da Xu</a></li>
