--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
       <p><font color="#9933CC">𝐄𝐱𝐜𝐞𝐥𝐥𝐞𝐧𝐭 𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font></p>
         <li><a href="./resources/PowerPoint/On%20the%20inductive%20bias%20of%20language%20modeling.pptx"> <i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i> On the Inductive Bias of Language Modeling</a> | <a href="https://youtu.be/PNTbvoweqBk?t=3046"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Oral Presentation (Tatsunori B. Hashimoto)</a></li>
-        <!--    <li><a href="./resources/PowerPoint/智能制造优化调度及展望.pdf"> <i class="fa fa fa-book"></i> 智能制造优化调度及展望</a></li>-->
+        <li><a href="./resources/PowerPoint/智能制造优化调度及展望.pdf"> <i class="fa fa fa-book"></i> 智能制造优化调度及展望</a></li>
       
       <p><font color="#9933CC">𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐁𝐨𝐨𝐤𝐬</font></p>
         <li><a href="./books/Convex%20Optimization.pdf"> <i class="fab fa fa-book"></i> Convex Optimization (Stephen Boyd and Lieven Vandenberghe)</a></li>
