--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
   Some of my presentations and resources can be found
   <details>
       <summary style="outline:none">here</summary>
+      <p><font color="#9933CC">𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font> - Artificial Intelligence (AI)</p>
+    <li><a href="./files/Presentation/Current-Artificial-Intelligence-2023-ShuyueJIA.pptx"> <i class="fab fa fa-file-pdf-o"></i> AI In the 2020s And Beyond</a></li>
       
       <p><font color="#9933CC">𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font> - Graph Neural Network (GNN)</p>
         <li><a href="./files/EEG/GCNs-Net-Summary.pdf"> <i class="fab fa fa-file-pdf-o"></i> Graph Convolutional Neural Networks</a></li>
