--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   
   <br>
   <br>
-  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a>, advised by <a href="https://ieeexplore.ieee.org/author/37088228789" style="color:black;">Dr. Hui Zhang</a>, and the Medical Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, advised by <a href="https://ieeexplore.ieee.org/author/37087015509" style="color:black;">Dr. Shuang Zhou</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>, in Irvine, CA.
+  During my studies, I interned at the Computer Vision team of <a href="https://research.samsung.com/src-b"> Samsung Research</a>, advised by <a href="https://ieeexplore.ieee.org/author/37088228789" style="color:black;">Dr. Hui Zhang</a>, and the Medical Natural Language Processing team of <a href="https://www.philips.com/a-w/about/innovation/innovation-hubs.html">Philips Research</a>, advised by <a href="https://ieeexplore.ieee.org/author/37087015509" style="color:black;">Dr. Shuang Zhou</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
   
   <br>
   <br>
