--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Sept 2023</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/10251073/"> Deep Transfer Learning</a> is accepted by <em>IEEE T-IM</em>.
+  </li>
+  <li>
     <strong>May 2023</strong> 𝗠.𝗣𝗵𝗶𝗹.𝗧𝗵𝗲𝘀𝗶𝘀: <a href="https://scholars.cityu.edu.hk/en/theses/noreference-image-quality-assessment-via-nonlocal-modeling(2d1e72fb-2405-43df-aac9-4838b6da1875).html"> No-reference Image Quality Assessment via Non-local Modeling</a> and 𝗗𝗲𝗳𝗲𝗻𝘀𝗲 𝗦𝗹𝗶𝗱𝗲𝘀: <a href="./files/Thesis/MPhil-Thesis-Defense-Presentation-ShuyueJia.pdf"> Image Quality Assessment and Perceptual Optimization: A Non-local Modeling Approach</a>.
   </li>
   <li>
