--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Oct 2023</strong> Created <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome-LLM-Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
+    <iframe
+      src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>
+    <iframe
+      src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>.
+  </li>
+  <li>
     <strong>Sept 2023</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/10251073/"> Deep Transfer Learning</a> is accepted by <em>IEEE T-IM</em>.
   </li>
   <li>
