--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Oct 2023</strong> Created <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome-LLM-Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
+    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome-LLM-Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
