update from mac

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
         <li><a href="./books/Computer%20Organization%20and%20Design-%20The%20Hardware%3ASoftware%20Interface.pdf"> <i class="fab fa fa-book"></i> Computer Organization and Design: The Hardware/Software Interface (David A. Patterson and John L. Hennessy)</a></li>
         
       <p><font color="#9933CC">𝐀𝐜𝐚𝐝𝐞𝐦𝐢𝐜 𝐑𝐞𝐬𝐨𝐮𝐫𝐜𝐞𝐬</font></p>
+        <li><a href="./resources/Writing-and-Technical-Presentations.pdf"> <i class="fab fa fa-file-pdf-o"></i> Writing and Technical Presentations by Prof. Ayse Coskun</a></li>
+        <li><a href="./resources/English-Writing.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Most Common Habits from more than 200 English Papers written by Graduate Chinese Engineering Students by Felicia Brittman</a></li>
         <li><a href="./resources/How_to_Write_Good_Research_Articles_Xiaohua_JIA.pdf"> <i class="fab fa fa-file-pdf-o"></i> How to Write Good Research Articles by Prof. Xiaohua Jia</a></li>
         <li><a href="./resources/业余做研究的经验-田渊栋.pdf"> <i class="fab fa fa-file-pdf-o"></i> 业余做研究的经验 by Dr. Yuandong Tian</a></li>
         <li><a href="./resources/How_to_do_Research.ppt"> <i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i> What is Research and How to do it? by Prof. Yi Ma</a></li>
@@ -218,10 +220,10 @@
         <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
         <li><a href="./resources/清华计算机系与人工智能40年.pdf"> <i class="fab fa fa-file-pdf-o"></i> 清华大学计算机系与人工智能40年</a></li>
         <li><a href="./resources/Academic-Achievements-Richard.pdf"> <i class="fab fa fa-file-pdf-o"></i> Academic Achievements of Prof. Richard Yi-Da Xu</a></li>
+        <li><a href="./resources/Bio-Richard.pdf"> <i class="fab fa fa-file-pdf-o"></i> Brief Bio of Prof. Richard Yi-Da Xu</a></li>
         <li><a href="./resources/Prompt-Engineering.pdf"> <i class="fab fa fa-file-pdf-o"></i> Prompt Template Engineering Experiment by Prof. Edward Chang</a></li>
         <li><a href="./resources/心靈之旅.pdf"> <i class="fab fa fa-file-pdf-o"></i> 心灵之旅 by Prof. Edward Chang</a></li>
         <li><a href="./resources/What-is-life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 生命是什么? by Prof. Edward Chang</a></li>
-
         <li><a href="./resources/徐轶青-读博那些事儿.pdf"> <i class="fab fa fa-file-pdf-o"></i> 读博那些事儿 by Prof. Yiqing Xu</a></li>
         <li><a href="./resources/The-PhD-Grind.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Ph.D. Grind by Prof. Philip J. Guo</a></li>
         <li><a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html"> <i class="fab fa-internet-explorer"></i> You and Your Research by Prof. Richard Hamming</a></li>
