--- a/index.html
+++ b/index.html
@@ -256,6 +256,20 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome-Semantic-Textual-Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
+    <iframe
+      src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>
+    <iframe
+      src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>.
+  </li>
+  <li>
+    <strong>Oct 2023</strong> A <a href="./files/Presentation/Sentence_Textual_Similarity-Model_Evolution_Overview.pdf"> Presentation</a> of Sentence Textual Similarity: Model Evolution Overview.
+  </li>
+  <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome-LLM-Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
