update from mac

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h2 id="about-me">Bio</h2>
 <p><img class="profile-picture" src="./imgs/Big-Buddha-Shuyue-Profile.jpg"/></p>
 <p>
-  I am a Ph.D. student at <a href="https://www.bu.edu/">Boston University</a>, under the supervision of <a href="https://sites.bu.edu/depend/research/" style="color:black;">Prof. Wenchao Li</a>. Prior to BU, I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
+  I am a Ph.D. student at <a href="https://www.bu.edu/">Boston University</a>. Prior to BU, I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
   
   <br>
   <br>
@@ -210,6 +210,7 @@
         <li><a href="https://new.nsf.gov/policies/pappg/23-1/table-of-contents"> <i class="fab fa-internet-explorer"></i> NSF's Proposal Preparation & Submission Guidelines</a></li>
         <li><a href="./resources/ACL-Fellow-Nomination.pdf"> <i class="fab fa fa-file-pdf-o"></i> ACL Fellow Nomination Form</a></li>
         <li><a href="./resources/CityU-AP.pdf"> <i class="fab fa fa-file-pdf-o"></i> CityU AP Promotion</a></li>
+        <li><a href="./resources/RICE-Offer.pdf"> <i class="fab fa fa-file-pdf-o"></i> RICE AP Offer</a></li>
 
       <p><font color="#9933CC">𝐑𝐞𝐜𝐨𝐦𝐦𝐞𝐧𝐝𝐞𝐝 𝐑𝐞𝐚𝐝𝐢𝐧𝐠𝐬</font></p>
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
