--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h2 id="about-me">Bio</h2>
 <p><img class="profile-picture" src="./imgs/Big-Buddha-Shuyue-Profile.jpg"/></p>
 <p>
-  I am a Ph.D. student at <a href="https://www.bu.edu/">Boston University</a>. Prior to BU, I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
+  I am a first-year Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>. Prior to BU, I received my M.Phil. degree (2023) from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>.
   
   <br>
   <br>
