--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
   <br>
   
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
+  <a href="https://huggingface.co/shuyuej">&#129303;&#32;HuggingFace</a>
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i>&#32;GitHub</a>
   <iframe src="https://img.shields.io/github/followers/SuperBruceJia?label=follow&style=social" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
   <iframe src="https://img.shields.io/github/stars/SuperBruceJia?label=stars&style=social" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
