--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Dec 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/promptcraft"> PromptCraft</a> and its published <a href="https://pypi.org/project/promptcraft"> PyPI Package</a>, a prompt perturbation toolkit from the character, word, and sentence levels for prompt robustness analysis
+    <iframe
+      src="https://img.shields.io/github/stars/SuperBruceJia/promptcraft?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>
+    <iframe
+      src="https://img.shields.io/github/forks/SuperBruceJia/promptcraft?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>.
+  </li>
+  <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome-Semantic-Textual-Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
