--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <br>
   <br>
   
-  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Vision and Language Multimodal Learning, Interpretable AI, Foundation Models, e.g., Large Pre-trained Models, and AI in Healthcare.
+  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Vision and Language Multimodal Learning, Interpretable AI, Foundation Models, e.g., Large Pre-trained Models, AI for Healthcare, and Computational Pathology, e.g., Gigapixel Whole Slide Images (WSIs).
   <details>
     <summary style="outline:none">here</summary>
     <div style="text-align:center">
