--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
     </iframe>.
   </li>
   <li>
+    <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pptx"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
+  </li>
+  <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome-Semantic-Textual-Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
@@ -292,6 +295,12 @@
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
     </iframe>.
+  </li>
+  <li>
+    <strong>Sept 2023</strong> A <a href="./files/Presentation/Prompt-based-Learning-and-Robustness-Evaluation-2023-Shuyue-JIA.pptx"> Presentation</a> of Prompt-based Learning and Robustness Evaluation.
+  </li>
+  <li>
+    <strong>Sept 2023</strong> A <a href="./files/Presentation/Self-Consistency-Benefits-Large-Language-Models-2023-Shuyue-JIA.pptx"> Presentation</a> of Self-Consistency Benefits Large Language Models.
   </li>
   <li>
     <strong>Sept 2023</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/10251073/"> Deep Transfer Learning</a> is accepted by <em>IEEE T-IM</em>.
