--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pptx"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
   </li>
   <li>
-    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome-Semantic-Textual-Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
+    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome Semantic Textual Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
@@ -286,7 +286,7 @@
     <strong>Oct 2023</strong> A <a href="./files/Presentation/Sentence_Textual_Similarity-Model_Evolution_Overview.pdf"> Presentation</a> of Sentence Textual Similarity: Model Evolution Overview.
   </li>
   <li>
-    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome-LLM-Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
+    <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome LLM Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
