--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
       <a href="./files/MMSP/MMSP22_Poster.pdf"><i class="fa fa-file-powerpoint-o"></i> Poster</a>
       <a href="./files/Presentation/A_Summary_Three_Projects.pdf"><i class="fa fa-file-powerpoint-o"></i> Slides</a>
       <a href="https://github.com/SuperBruceJia/NLNet-IQA"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://huggingface.co/shuyuej/NLNet">&#129303;&#32;HuggingFace</a>
       <a href="https://ieeexplore.ieee.org/abstract/document/9950035"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
     <br><em>IEEE 24th International Workshop on Multimedia Signal Processing</em> (IEEE MMSP'22)
