--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pptx"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
+    <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pdf"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
   </li>
   <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome Semantic Textual Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
@@ -298,10 +298,10 @@
     </iframe>.
   </li>
   <li>
-    <strong>Sept 2023</strong> A <a href="./files/Presentation/Prompt-based-Learning-and-Robustness-Evaluation-2023-Shuyue-JIA.pptx"> Presentation</a> of Prompt-based Learning and Robustness Evaluation.
+    <strong>Sept 2023</strong> A <a href="./files/Presentation/Prompt-based-Learning-and-Robustness-Evaluation-2023-Shuyue-JIA.pdf"> Presentation</a> of Prompt-based Learning and Robustness Evaluation.
   </li>
   <li>
-    <strong>Sept 2023</strong> A <a href="./files/Presentation/Self-Consistency-Benefits-Large-Language-Models-2023-Shuyue-JIA.pptx"> Presentation</a> of Self-Consistency Benefits Large Language Models.
+    <strong>Sept 2023</strong> A <a href="./files/Presentation/Self-Consistency-Benefits-Large-Language-Models-2023-Shuyue-JIA.pdf"> Presentation</a> of Self-Consistency Benefits Large Language Models.
   </li>
   <li>
     <strong>Sept 2023</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/10251073/"> Deep Transfer Learning</a> is accepted by <em>IEEE T-IM</em>.
