--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <br>
   <br>
   
-  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Foundation Models, e.g., Large Pre-trained Models, Reasoning with Foundation Models, Vision and Language Multimodal Learning, Trustworthy AI, and AI for Healthcare.
+  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: I put all my effort into Foundation Models, e.g., Pre-trained Large Language Models (LLMs), Reasoning with Foundation Models, Vision and Language Multimodal Learning, Trustworthy AI, and AI for Healthcare.
   
   <details>
     <summary style="outline:none">here</summary>
