--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
   
   <br>
-  
+  <a href="./files/resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
   <a href="https://huggingface.co/shuyuej">&#129303;&#32;HuggingFace</a>
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i>&#32;GitHub</a>
@@ -268,9 +268,6 @@
       src="https://img.shields.io/github/forks/SuperBruceJia/promptcraft?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
     </iframe>.
-  </li>
-  <li>
-    <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pdf"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
   </li>
   <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome Semantic Textual Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
@@ -296,6 +293,9 @@
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
     </iframe>.
+  </li>
+  <li>
+    <strong>Oct 2023</strong> A <a href="./files/Presentation/Prompt-Perturbation-and-Robustness-Evaluation-2023-Shuyue-JIA.pdf"> Presentation</a> of Prompt Perturbation and Robustness Evaluation.
   </li>
   <li>
     <strong>Sept 2023</strong> A <a href="./files/Presentation/Prompt-based-Learning-and-Robustness-Evaluation-2023-Shuyue-JIA.pdf"> Presentation</a> of Prompt-based Learning and Robustness Evaluation.
