--- a/index.html
+++ b/index.html
@@ -262,7 +262,10 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>Dec 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/promptcraft"> PromptCraft</a> and its published <a href="https://pypi.org/project/promptcraft"> PyPI Package</a>, a prompt perturbation toolkit from the character, word, and sentence levels for prompt robustness analysis
+    <strong>Jan 2024</strong> 🔥 We are releasing <a href="https://huggingface.co/datasets/shuyuej/GSM8K-Consistency">&#129303;&#32;GSM8K-Consistency</a>, a benchmark database for analyzing the consistency of Arithmetic Reasoning on GSM8K.
+  </li>
+  <li>
+    <strong>Dec 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/promptcraft"> 🔨 PromptCraft</a> and its published <a href="https://pypi.org/project/promptcraft"> PyPI Package</a>, a prompt perturbation toolkit from the character, word, and sentence levels for prompt robustness analysis
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/promptcraft?style=social" 
       frameborder="0" scrolling="0" width="90px" height="20px">
