--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>Aug 2022</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> is accepted by <em>IEEE MMSP</em>
+    <strong>Aug 2022</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> is accepted by <em>IEEE MMSP</em>. Source codes are available on <a href="https://github.com/SuperBruceJia/NLNet-IQA">GitHub</a>
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
       frameborder="0" scrolling="0" width="85px" height="20px">
@@ -344,7 +344,7 @@
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/NLNet-IQA?style=social"
       frameborder="0" scrolling="0" width="85px" height="20px">
-    </iframe>.
+    </iframe>, and the trained models are available on <a href="https://huggingface.co/shuyuej/NLNet">&#129303;&#32;HuggingFace</a> for real-life IQA inference.
   </li>
   <li>
     <strong>Dec 2021</strong> Our paper <a href="https://www.frontiersin.org/article/10.3389/fbioe.2021.706229"> BiLSTM-GCNs</a> is accepted by <em>Frontiers in Bioengineering and Biotechnology</em>.
