--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
   
   <br>
-  <a href="./files/resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>
+  <!--  <a href="./files/resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>-->
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
   <a href="https://huggingface.co/shuyuej">&#129303;&#32;HuggingFace</a>
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i>&#32;GitHub</a>
