--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 <div class="wrapper">
 <div class="navbar container">
-  <a id="author-name" class="alignable pull-left" style="text-decoration:none">Shuyue Jia</a>
+  <a id="author-name" class="alignable pull-left" style="text-decoration:none">Shuyue Jia (Bruce)</a>
 </div>
 <div style="clear:both"></div>
 
@@ -71,7 +71,7 @@
 </div>
 
 <p>
-  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>, advised by <a href="https://www.bu.edu/cds-faculty/profile/vijaya-kolachalama/" style="color:black;">Prof. Vijaya B. Kolachalama</a> and <a href="https://www.cs.ksu.edu/about/people/faculty/hsu" style="color:black;">Prof. William Hsu</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
+  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>. I am very fortunate to be advised by <a href="https://www.bu.edu/cds-faculty/profile/vijaya-kolachalama/" style="color:black;">Prof. Vijaya Kolachalama</a> and <a href="https://www.cs.ksu.edu/about/people/faculty/hsu" style="color:black;">Prof. William Hsu</a>. I have previously interned at Philips Research and Samsung Research. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a>, <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>, and <a href="http://meyangli.com/" style="color:black;">Prof. Yang Li</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
   
   <br>
   <br>
@@ -246,10 +246,11 @@
   
   <br>
   
-  Email: <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
+  Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>
   
   <br>
   <!--  <a href="./files/resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>-->
+  <a href="https://www.strava.com/athletes/shuyuej"><i class='fab fa-strava' style='font-size:25px;color:red'></i>&#32;Strava</a>
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
   <a href="https://huggingface.co/shuyuej">&#129303;&#32;HuggingFace</a>
   <a href="https://github.com/SuperBruceJia"><i class="fab fa-github"></i>&#32;GitHub</a>
