--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </style>
     
-    <link rel="shortcut icon" href="Google.ico">
+    <link rel="shortcut icon" href="bu.ico">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
     <link rel="alternate" type="application/rss+xml" title="Shuyue Jia RSS" href="/feed.xml" />
     <link rel="stylesheet" href="/css/main.css">
