--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>𝑺𝒉𝒖𝒚𝒖𝒆 𝑱𝒊𝒂 (𝑩𝒓𝒖𝒄𝒆 𝑱𝒊𝒂)</title>
+  <title>Shuyue Jia (Bruce Jia)</title>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
