--- a/index.html
+++ b/index.html
@@ -608,9 +608,13 @@
     IEEE Transactions on Industrial Informatics (IEEE T-II)<br>
     IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
     IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
-    IEEE Sensors Journal
+    IEEE Sensors Journal<br>
+    Postharvest Biology and Technology<br>
+    Scientific Reports<br>
+    Energy Reports<br>
+    Analytical Methods
   </li>
-  <li><strong>Student Member</strong> of IEEE, ACM, ACL, and AAAI</li>
+  <li><strong>Member</strong> of IEEE, ACM, ACL, AAAI, and AAAS</li>
 </ol>
 
 <h2 id="Selected Awards">Selected Awards</h2>
